--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -3,7 +3,7 @@ description: Demonstrates how to use the path_provider_ex plugin.
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.12.0"
 
 dependencies:
   flutter:
@@ -11,13 +11,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  path_provider_ex:
+  path_provider_ex2:
     path: ../
 
 # For information on the generic Dart part of this file, see the
