--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,11 @@
 name: path_provider_ex2
 description: App files directory, root storage, and available space for ext storage and SD card on Android
-version: 2.0.1
+version: 2.0.12
 homepage: https://github.com/AmudAnan/flutter_path_provider_ex
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=2.18.1 <3.0.0'
+  flutter: ">=2.5.0"
 
 dependencies:
   flutter:
@@ -24,8 +25,10 @@ flutter:
   # be modified. They are used by the tooling to maintain consistency when
   # adding or updating assets for this project.
   plugin:
-    androidPackage: com.amudanan.path_provider_ex
-    pluginClass: PathProviderExPlugin
+    platforms:
+      android:
+        package: com.amudanan.path_provider_ex2
+        pluginClass: PathProviderEx2Plugin
 
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
